# H_w_14.1

./: .coverage  .flake8  .gitignore  README.md  config.py  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_read_file_json_py.html
src/: category.py  iter_item.py  product.py  read_file_json.py
tests/: conftest.py  test_category.py  test_iter_item.py  test_product.py  test_read_file_json.py
