[project]
name = "h-w-14-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Farkov",email = "fef84@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)"
]

[tool.poetry]
packages = [{include = "h_w_9"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^25.1.0"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = '\.git/'

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'